fixed - jumpscare timeout issue

--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -278,20 +278,6 @@ a:hover {
 }
 
 
-
-
-#pageGuessName,
-#pageGuessDate,
-#pageShare,
-#pageClues {
-    display: none;
-    width: 100%;
-    min-height: 100%;
-    position: absolute;
-    z-index: 1;
-    background-color: #000000;
-}
-
 .borderDebug {
     border: 1px solid red;
 }
