--- a/src/sass/och/_game.scss
+++ b/src/sass/och/_game.scss
@@ -1,3 +1,15 @@
+#pageGuessName,
+#pageGuessDate,
+#pageShare,
+#pageClues {
+    display: none;
+    width: 100%;
+    min-height: 100%;
+    position: absolute;
+    z-index: 1;
+    background-color: #000000;
+}
+
 #pano {
   z-index: 1;
 }
