--- a/styles/game-och.css
+++ b/styles/game-och.css
@@ -285,6 +285,17 @@
   #pageGuessName .ftr .ftr__link,
   #pageGuessDate .ftr .ftr__link {
     display: none; } }
+#pageGuessName,
+#pageGuessDate,
+#pageShare,
+#pageClues {
+  display: none;
+  width: 100%;
+  min-height: 100%;
+  position: absolute;
+  z-index: 1;
+  background-color: #000000; }
+
 #pano {
   z-index: 1; }
 
